fixed issue winning game, added dark mode toggle

--- a/lbaldle/dataStyle.css
+++ b/lbaldle/dataStyle.css
@@ -2,6 +2,7 @@
 {
     cursor: pointer;
     color: cyan;
+    background-color: var(--light-bg-select);
 }
 
 .hint
